[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "hammer"
author = "Jean-Mathieu Vermosen"
author-email = "vermosen@yahoo.com"
home-page = "https://github.com/vermosen/hammer"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

